Solved problems with wu algorithm